# revops-engine

./: .clasp.json  .gitignore  .mcp.json  AI-PODCAST-PROMPT.txt  AI_PROJECTS_BRAIN.md  CLAUDE.md  Conversations_With_A_Codebase.md  Current Map.md  Dockerfile.new  README.md  agent_server.py  claude_desktop_config.example.json  claudecodeinstructions.md  claudetasks.md  cloudeflare.md  deploy_medtainer_tunnel.sh  docker-compose.mcp.yml  docker-compose.yml.new  init_db.py  jobplan.md  keys.txt  kruze.md  mcp-client.js  mcp-http-bridge.js  medtainer_claude_desktop_setup.md  medtainer_implementation_plan.md  medtainer_tunnel_setup.md  new_routes.py  package.json  railway.md  spectrum_manifesto.txt  token_1.json  visionanchor.md  webhook_router.py  wrangler.toml
CursorMCP/: .gitignore  ARCHITECTURE.md  BUILD_SUMMARY.md  CLOUDFLARE_TOOLS.md  CURSOR_SETUP.md  DEPLOYMENT_GUIDE.md  DOCKER_OPTIMIZATION_NOTES.md  Dockerfile  MULTI_MCP_VISION.md  QUICKSTART.md  README.md  README_DOCKER.md  SYSTEMS_READY.md  TOOL_COUNT.md  docker-compose.yml  pyproject.toml  requirements.txt  test_docker.sh  test_mcp_server.py
CursorMCP/examples/: mcp-server-template.js  worker-template.js  workflow-template.json
CursorMCP/src/cursormcp/: __init__.py  config.py  main.py
CursorMCP/src/cursormcp/server/: __init__.py  mcp_server.py  router.py  types.py
CursorMCP/src/cursormcp/services/: __init__.py  cloudflare.py  logger.py
CursorMCP/src/cursormcp/tools/: __init__.py  base.py  mcp_apps.py  registry.py  system_scaffold.py
CursorMCP/src/cursormcp/tools/cloudflare/: __init__.py  d1.py  kv.py  (+5 more)
(+397 files in other folders)
